# fix-your-life-agent

./: README.md  principles.db  pyproject.toml
src/: main.py
src/agent/: TEMPORARY.py  agent.py  principle_agent.py  prompts.py
src/agent/models/: __init__.py
src/agent/services/: principle.py
src/tools/: create_tables.py
